apps/app-proxy/overlays/codefresh/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: codefresh-cap-app-proxy
  namespace: codefresh
spec:
  ingressClassName: nginx
  rules:
  - host: ngx.example.com
    http:
      paths:
      - backend:
          service:
            name: cap-app-proxy
            port:
              number: 3017
        path: /app-proxy/
        pathType: Prefix
status:
  loadBalancer: {}
